welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: value unary_! is not a member of Int
	 if(!getY()==6){
            ^